@@ -4,6 +4,7 @@
 ./Tests/Mono.Rocks.Tests/KeyValuePairTest.cs
 ./Tests/Mono.Rocks.Tests/NaturalStringComparerTest.cs
 ./Tests/Mono.Rocks.Tests/SequenceTest.cs
+./Tests/Mono.Rocks.Tests/StreamTest.cs
 ./Tests/Mono.Rocks.Tests/StringTest.cs
 ./Tests/Mono.Rocks.Tests/TextReaderTest.cs
 ./Tests/Mono.Rocks.Tests/IEnumerableTest.cs
