@@ -6,6 +6,7 @@
 ./Mono.Rocks/KeyValuePair.cs
 ./Mono.Rocks/NaturalStringComparer.cs
 ./Mono.Rocks/Sequence.cs
+./Mono.Rocks/Stream.cs
 ./Mono.Rocks/String.cs
 ./Mono.Rocks/TextReader.cs
 ./Mono.Rocks/Tuple.cs
