@@ -1,3 +1,9 @@
+2008-08-07  Jonathan Pryor  <jpryor@novell.com>
+
+	* Mono.Rocks.dll.sources: Add Mono.Rocks/Stream.cs to the build.
+	* Mono.Rocks.Tests.dll.sources: Add Tests/Mono.Rocks.Tests/StreamTest.cs 
+	  to the build.
+
 2008-08-05  Jonathan Pryor  <jpryor@novell.com>
 
 	* . (svn:ignore): Ignore generated files.
